--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,73 +1,52 @@
-<h1>
-  {{title}}
-</h1>
+<div>
 
-
-<!-- Dropdown Structure -->
-<ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">one</a></li>
-  <li><a href="#!">two</a></li>
-  <li class="divider"></li>
-  <li><a href="#!">three</a></li>
-</ul>
+<!-- NAVBAR -->
 <nav>
-  <div class="nav-wrapper">
+  <div class="nav-wrapper white-text light-blue accent-3">
     <a href="#!" class="brand-logo">Logo</a>
+    <a href="#!" data-activates="mobile-navbar-menu" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <!-- Dropdown Trigger -->
-      <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+      <li><a href="#!">Item 1</a></li>
+      <li><a href="#!">Item 2</a></li>
+      <li><a href="#!">Item 3</a></li>
+      <li><a href="#!">Item 4</a></li>
+      <li><a href="#!">Item 5</a></li>
+    </ul>
+    <ul class="side-nav" id="mobile-navbar-menu">
+      <li><a href="#!">Item 1</a></li>
+      <li><a href="#!">Item 2</a></li>
+      <li><a href="#!">Item 3</a></li>
+      <li><a href="#!">Item 4</a></li>
+      <li><a href="#!">Item 5</a></li>
     </ul>
   </div>
 </nav>
+<!-- /NAVBAR -->
 
-
-
-
-<nav>
-  <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Logo</a>
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
-    </ul>
-    <ul class="side-nav" id="mobile-demo">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
-    </ul>
-  </div>
-</nav>
-
-
-<div class="fixed-action-btn horizontal click-to-toggle" style="bottom: 45px; right: 24px;">
-   <a class="btn-floating btn-large red">
-     <i class="material-icons">menu</i>
-   </a>
-   <ul>
-     <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-     <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-     <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-     <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-   </ul>
- </div>
-
-
-
- <div class="parallax-container">
-    <div class="parallax"><img src="https://static.pexels.com/photos/87646/horsehead-nebula-dark-nebula-constellation-orion-87646.jpeg"></div>
-  </div>
-  <div class="section white">
-    <div class="row container">
-      <h2 class="header">Parallax</h2>
-      <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+<!-- CONTENT -->
+<div class="container">
+  <!-- full webpage -->
+  <div class="row center-align hide-on-small-only">
+    <div *ngFor="let item of list">
+      <div class="col l6 m12">
+        <a href="#!" class="waves-effect waves-light btn-large z-depth-4 fullWidth rwdFont">
+          {{ item }}
+        </a>
+      </div>
     </div>
   </div>
-  <div class="parallax-container">
-    <div class="parallax"><img src="https://static.pexels.com/photos/89184/pexels-photo-89184.jpeg"></div>
+  <!-- mobile -->
+  <div class="row center-align hide-on-med-and-up">
+    <div *ngFor="let item of listMobile">
+      <div class="col s12">
+        <a href="#!" class="waves-effect waves-light btn-floating btn-large z-depth-4 fullWidth">
+          {{ item }}
+        </a>
+      </div>
+    </div>
   </div>
+
+</div>
+<!-- /CONTENT -->
+
+</div>
