Implement Time and Date component

--- a/src/app/tools/time-date.component.html
+++ b/src/app/tools/time-date.component.html
@@ -41,6 +41,16 @@
 
   </div>
 
-  <h4>{{myDate}}</h4>
+  <br>
+  <h4>Sent: <span style="color:red;">{{myDate}}</span></h4>
+  <br>
+  <h4>Received: <span style="color:blue;">{{outputData}}</span></h4>
+  <br>
+  <!-- <div *ngIf="outputData.date">
+    <h3>Date: {{outputData.date}}</h3>
+    <h3>JD: {{outputData.JD}}</h3>
+    <h3>MJD: {{outputData.MJD}}</h3>
+    <h3>Decimal year: {{outputData.decimalYr}}</h3>
+  </div> -->
 
 </div>
