--- a/src/app/tools/multiplex-energy.component.html
+++ b/src/app/tools/multiplex-energy.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <h4>Multiplex energy converter</h4>
   <div class="row">
 
@@ -16,10 +16,10 @@
     <div class="input-field col s12 m4 l4">
 
       <select id="unit1" name="unit1" materialize="material_select" [materializeSelectOptions]="energyUnits" (change)="setUnit1($event.target.value); getData()">
-        <option value="" disabled selected>Units</option>
+        <option value="" disabled selected>Select a unit</option>
         <option *ngFor="let unit of unitsList" [value]="unit">{{unit}}</option>
       </select>
-      <label for="unit1">Select a unit</label>
+      <!-- <label for="unit1">Select a unit</label> -->
 
     </div>
 
