--- a/src/app/tools/time-date.component.html
+++ b/src/app/tools/time-date.component.html
@@ -44,13 +44,29 @@
   <br>
   <h4>Sent: <span style="color:red;">{{myDate}}</span></h4>
   <br>
-  <h4>Received: <span style="color:blue;">{{outputData}}</span></h4>
+  <h4>Calendar time formats</h4>
+  <div *ngIf="outputData.date" style="color:blue;">
+    <h5>ISO 8601: {{outputData.iso}}</h5>
+    <h5>Date: {{outputData.date}}</h5>
+    <h5>JD: {{outputData.JD}}</h5>
+    <h5>MJD: {{outputData.MJD}}</h5>
+    <h5>Decimal year: {{outputData.decimalYr}}</h5>
+    <h5>Year and day of the year: {{outputData.yDay}}</h5>
+  </div>
   <br>
-  <!-- <div *ngIf="outputData.date">
-    <h3>Date: {{outputData.date}}</h3>
-    <h3>JD: {{outputData.JD}}</h3>
-    <h3>MJD: {{outputData.MJD}}</h3>
-    <h3>Decimal year: {{outputData.decimalYr}}</h3>
-  </div> -->
+  <h4>Mission-specific time formats</h4>
+  <div *ngIf="outputData.date" style="color:blue;">
+    <h5>Fermi seconds since 2001.0 UTC: {{outputData.fermi}}</h5>
+    <h5>Fermi mission week: </h5>
+    <h5>LIGO/GPS seconds since 1980-01-06 UTC: {{outputData.ligo}}</h5>
+    <h5>NuSTAR seconds since 2010.0 UTC: {{outputData.nustar}}</h5>
+    <h5>RXTE seconds since 1994.0 UTC (decimal): {{outputData.rxte}}</h5>
+    <h5>RXTE seconds since 1994.0 UTC (hexadecimal): </h5>
+    <h5>RXTE mission day number: </h5>
+    <h5>RXTE decimal mission day: </h5>
+    <h5>Suzaku seconds since 2000.0 UTC: {{outputData.suzaku}}</h5>
+    <h5>Swift seconds since 2001.0 UTC: {{outputData.swift}}</h5>
+    <h5>XMM/Chandra seconds since 1998.0 UTC: {{outputData.xmmChandra}}</h5>
+  </div>
 
 </div>
